07_Kebernetes/task4/deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-deployment
  labels:
    app: multi-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multi-app
  template:
    metadata:
      labels:
        app: multi-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80

      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
