07_Kebernetes/task4/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-nodeport
spec:
  type: NodePort
  selector:
    app: multi-app
  ports:
  - name: nginx-nodeport
    port: 9001
    targetPort: 80
    nodePort: 30001
  - name: multitool-nodeport
    port: 9002
    targetPort: 8080
    nodePort: 30002
